src/styles/isomer-template.scss
/* ... */
.bp-hero.is-warning .navbar-link.is-active,.bp-hero.is-warning .navbar-link:hover,.bp-hero.is-warning a.navbar-item.is-active,.bp-hero.is-warning a.navbar-item:hover {
    background-color: #ffd83d;
    color: rgba(0,0,0,.7)
}

.bp-hero.is-warning .tabs a {
    color: rgba(0,0,0,.7);
    opacity: .9
}

.bp-hero.is-warning .tabs a:hover {
    opacity: 1
}

.bp-hero.is-warning .tabs li.is-active a {
    opacity: 1
}

.bp-hero.is-warning .tabs.is-boxed a,.bp-hero.is-warning .tabs.is-toggle a {
    color: rgba(0,0,0,.7)
}

.bp-hero.is-warning .tabs.is-boxed a:hover,.bp-hero.is-warning .tabs.is-toggle a:hover {
    background-color: rgba(10,10,10,.1)
}

.bp-hero.is-warning .tabs.is-boxed li.is-active a,.bp-hero.is-warning .tabs.is-boxed li.is-active a:hover,.bp-hero.is-warning .tabs.is-toggle li.is-active a,.bp-hero.is-warning .tabs.is-toggle li.is-active a:hover {
    background-color: rgba(0,0,0,.7);
    border-color: rgba(0,0,0,.7);
    color: #ffdd57
}

.bp-hero.is-warning.is-bold {
    background-image: linear-gradient(141deg,#ffaf24 0,#ffdd57 71%,#fffa70 100%)
}

@media screen and (max-width: 768px) {
    .bp-hero.is-warning.is-bold .navbar-menu {
        background-image:linear-gradient(141deg,#ffaf24 0,#ffdd57 71%,#fffa70 100%)
    }
}

.bp-hero.is-danger {
    background-color: #ff3860;
    color: #fff
}

.bp-hero.is-danger a:not(.button):not(.dropdown-item):not(.tag),.bp-hero.is-danger strong {
    color: inherit
}

.bp-hero.is-danger .title {
    color: #fff
}

.bp-hero.is-danger .subtitle {
    color: rgba(255,255,255,.9)
}

.bp-hero.is-danger .subtitle a:not(.button),.bp-hero.is-danger .subtitle strong {
    color: #fff
}

@media screen and (max-width: 1023px) {
    .bp-hero.is-danger .navbar-menu {
        background-color:#ff3860
    }
}

.bp-hero.is-danger .navbar-item,.bp-hero.is-danger .navbar-link {
    color: rgba(255,255,255,.7)
}

.bp-hero.is-danger .navbar-link.is-active,.bp-hero.is-danger .navbar-link:hover,.bp-hero.is-danger a.navbar-item.is-active,.bp-hero.is-danger a.navbar-item:hover {
    background-color: #ff1f4b;
    color: #fff
}

.bp-hero.is-danger .tabs a {
    color: #fff;
    opacity: .9
}

.bp-hero.is-danger .tabs a:hover {
    opacity: 1
}

.bp-hero.is-danger .tabs li.is-active a {
    opacity: 1
}

.bp-hero.is-danger .tabs.is-boxed a,.bp-hero.is-danger .tabs.is-toggle a {
    color: #fff
}

.bp-hero.is-danger .tabs.is-boxed a:hover,.bp-hero.is-danger .tabs.is-toggle a:hover {
    background-color: rgba(10,10,10,.1)
}

.bp-hero.is-danger .tabs.is-boxed li.is-active a,.bp-hero.is-danger .tabs.is-boxed li.is-active a:hover,.bp-hero.is-danger .tabs.is-toggle li.is-active a,.bp-hero.is-danger .tabs.is-toggle li.is-active a:hover {
    background-color: #fff;
    border-color: #fff;
    color: #ff3860
}

.bp-hero.is-danger.is-bold {
    background-image: linear-gradient(141deg,#ff0561 0,#ff3860 71%,#ff5257 100%)
}

@media screen and (max-width: 768px) {
    .bp-hero.is-danger.is-bold .navbar-menu {
        background-image:linear-gradient(141deg,#ff0561 0,#ff3860 71%,#ff5257 100%)
    }
}

.bp-hero.is-small .bp-hero-body {
    padding-bottom: 1.5rem;
    padding-top: 1.5rem
}

@media screen and (min-width: 769px),print {
    .bp-hero.is-medium .bp-hero-body {
        padding-bottom:9rem;
        padding-top: 9rem
    }
}

@media screen and (min-width: 769px),print {
    .bp-hero.is-large .bp-hero-body {
        padding-bottom:18rem;
        padding-top: 18rem
    }
}

.bp-hero.is-fullheight .bp-hero-body,.bp-hero.is-halfheight .bp-hero-body {
    align-items: center;
    display: flex
}

.bp-hero.is-fullheight .bp-hero-body>.container,.bp-hero.is-halfheight .bp-hero-body>.container {
    flex-grow: 1;
    flex-shrink: 1
}

.bp-hero.is-halfheight {
    min-height: 50vh
}

.bp-hero.is-fullheight {
    min-height: 100vh
}

.bp-hero-video {
    bottom: 0;
    left: 0;
    position: absolute;
    right: 0;
    top: 0;
    overflow: hidden
}

.bp-hero-video video {
    left: 50%;
    min-height: 100%;
    min-width: 100%;
    position: absolute;
    top: 50%;
    transform: translate3d(-50%,-50%,0)
}

.bp-hero-video.is-transparent {
    opacity: .3
}

@media screen and (max-width: 768px) {
    .bp-hero-video {
        display:none
    }
}

.bp-hero-buttons {
    margin-top: 1.5rem
}

@media screen and (max-width: 768px) {
    .bp-hero-buttons .button {
        display:flex
    }

    .bp-hero-buttons .button:not(:last-child) {
        margin-bottom: .75rem
    }
}

@media screen and (min-width: 769px),print {
    .bp-hero-buttons {
        display:flex;
        justify-content: center
    }

    .bp-hero-buttons .button:not(:last-child) {
        margin-right: 1.5rem
    }
}

.bp-hero-foot,.bp-hero-head {
    flex-grow: 0;
    flex-shrink: 0
}

.bp-hero-body {
    background: rgba(0,0,0,.25);
    flex-grow: 1;
    flex-shrink: 0;
    padding: 3rem 1.5rem
}

@media screen and (min-width: 1024px) {
    .bp-hero-body .row {
        height:391px;
        min-height: 360px
    }
}

.bp-section {
    padding: 3rem 1.5rem
}

@media screen and (min-width: 1024px) {
    .bp-section.is-small {
        padding:1.5rem 1.5rem
    }

    .bp-section.is-medium {
        padding: 9rem 1.5rem
    }

    .bp-section.is-large {
        padding: 18rem 1.5rem
    }

    .bp-section.is-full {
        padding: 0
    }
}

.highlight {
    background: #f5f5f5
}

li .highlight {
    font-size: .8em;
    line-height: 1.5
}

.highlight .c {
    color: #998;
    font-style: italic
}

.highlight .err {
    color: #a61717;
    background-color: #e3d2d2
}

.highlight .k {
    font-weight: 700
}

.highlight .o {
    font-weight: 700
}

.highlight .cm {
    color: #998;
    font-style: italic
}

.highlight .cp {
    color: #999;
    font-weight: 700
}

.highlight .c1 {
    color: #998;
    font-style: italic
}

.highlight .cs {
    color: #999;
    font-weight: 700;
    font-style: italic
}

.highlight .gd {
    color: #000;
    background-color: #fdd
}
/* ... */

